apps/actualbudget/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "actualbudget"
spec:
  ports:
    - port: 80
      targetPort: "actualbudget"
  selector:
    app.kubernetes.io/name: "actualbudget"
