apps/actualbudget/networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "actualbudget"
spec:
  podSelector: {}
  egress: []
  ingress: []
